[tool.poetry]
name = "toadr3"
version = "0.25.0"
description = "Tiny OpenADR 3 compatible client Python Library"
authors = ["Jean-Paul Balabanian <jean-paul.balabanian@eviny.no>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/prelectai/toadr3"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.5"
aiodns = "^3.2.0"
pydantic = "^2.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pytest = "^8.3.0"
rich = "^14"
pytest-aiohttp = "^1"
pytest-asyncio = "^1"
mypy = "^1"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "tests"
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
